--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -124,10 +124,6 @@ section {
 .intro {
   text-align: center;
 }
- /*remove this CSS rule*/
-.intro h2 {
-  
-}
 
 .intro h2 {
   /* add this alongside your other declarations */
@@ -149,10 +145,6 @@ section {
 .steps {
   text-align: center;
   background: #fce138;
-}
-/*and this one*/
-.steps h2 {
- 
 }
 
 .section-title {
@@ -244,4 +236,36 @@ section {
 .trainer-bio p {
   font-size: 17px;
   line-height: 1.3;
+}
+
+.contact {
+  background-color: #024e76;
+  text-align: center;
+}
+
+.section {
+  font-size: 55px;
+  display: inline-block;
+  padding: 0 100px 20px 100px;
+  border-bottom: 3px solid;
+  margin-bottom: 35px;
+  color: #024e76;
+}
+
+.contact h2 {
+  color: #fce138;
+}
+
+.contact-info iframe {
+  width: 400px;
+  height: 400px;
+}
+
+.contact-info div {
+  width: 410px;
+  display: inline-block;
+  vertical-align: top;
+  text-align: left;
+  margin: 30px 0 0 60px;
+  color: white;
 }
