--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -238,18 +238,10 @@ section {
   line-height: 1.3;
 }
 
+/* REACH OUT STYLES START */
 .contact {
-  background-color: #024e76;
   text-align: center;
-}
-
-.section {
-  font-size: 55px;
-  display: inline-block;
-  padding: 0 100px 20px 100px;
-  border-bottom: 3px solid;
-  margin-bottom: 35px;
-  color: #024e76;
+  background: #024e76;
 }
 
 .contact h2 {
@@ -261,7 +253,7 @@ section {
   height: 400px;
 }
 
-.contact-info div {
+.contact-info div{
   width: 410px;
   display: inline-block;
   vertical-align: top;
@@ -269,3 +261,22 @@ section {
   margin: 30px 0 0 60px;
   color: white;
 }
+
+.contact-info h3 {
+  color: #fce138;
+  font-size: 32px;
+}
+
+.contact-info p,
+.contact-info address {
+  margin: 20px 0;
+  line-height: 1.5;
+  font-size: 20px;
+  font-style: normal;
+}
+
+.contact-info a {
+  color: #fce138;
+}
+
+/* REACH OUT STYLES END */
