--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -149,10 +149,10 @@ section {
 
 .section-title {
   font-size: 55px;
-  color: #024e76;
+  color:#024e76;
   margin-bottom: 35px;
-  padding: 0 100px 20px 100px;
   display: inline-block;
+  padding: 0 100px 20px 100px;
   border-bottom: 3px solid;
 }
 
@@ -279,3 +279,21 @@ section {
 }
 
 /* REACH OUT STYLES END */
+
+.page-title h2 {
+  display: inline-block;
+}
+
+.page-title {
+  color: #fce138;
+  border-bottom: #fce138 solid 4px;
+  padding: 0 80px 15px 80px;
+  font-weight: normal;
+  font-size: 42px;
+  font-style: italic;
+  display: inline-block;
+}
+
+.page-title {
+  text-align: center;
+}
