--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -142,10 +142,6 @@ section {
 }
 /* Hero Style End*/
 
-.intro {
-  text-align: center;
-}
-
 .intro h2 {
   /* add this alongside your other declarations */
   display: inline-block;
@@ -161,20 +157,21 @@ section {
 .intro p {
   /* add this alongside your other declarations */
   margin: 0 auto;
+  text-align: center;
 }
 
 .steps {
-  text-align: center;
   background: #fce138;
 }
 
 .section-title {
   font-size: 55px;
   color:#024e76;
-  margin-bottom: 35px;
-  display: inline-block;
-  padding: 0 100px 20px 100px;
   border-bottom: 3px solid;
+  padding-bottom: 20px;
+  text-align: center;
+  margin: 0 auto 35px auto;
+  width: 50%;
 }
 
 .primary-border {
@@ -185,32 +182,52 @@ section {
   border-color: #39a6b2;
 }
 
-.steps div {
-  margin-bottom: 80px;
-}
-
-.steps img {
-  width: 15%;
-  margin: 10px 0;
-}
-
 .steps h3 {
   color: #024e76;
   font-size: 46px;
   margin-top: 10px;
+  flex: 1 30%;
 }
 
-.steps p {
+.step-text h4 {
+  font-size: 26px;
+  line-height: 1.5;
+  color: #024e76;
+}
+
+.steps-text p {
   color: #39a6b2;
-  font-size: 23px;
+  font-size: 18px;
 }
 
-.steps span {
-  font-size: 38px;
+.step {
+  margin: 50px auto;
+  padding-bottom: 50px;
+  width: 80%;
+  border-bottom: 1px solid #39a6b2;
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: space-between;
+}
+.step-info {
+  flex: 2 70%;
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
 }
 
-.trainers {
-  text-align: center;
+.step-img {
+  flex: 1 12%;
+  margin-right: 20px;
+}
+
+.step-text {
+  flex: 12;
+}
+
+.step-img img {
+  max-width: 100%;
 }
 
 .trainer {
@@ -243,6 +260,10 @@ section {
   text-align: left;
 }
 
+.flex-row {
+  display: flex;
+}
+
 .trainer-bio h3 {
   font-size: 32px;
   margin-bottom: 8px;
@@ -261,7 +282,6 @@ section {
 
 /* REACH OUT STYLES START */
 .contact {
-  text-align: center;
   background: #024e76;
 }
 
